<resources>
    <string name="app_name">MatriculacionAlumnos</string>
    <string name="boton1">Asignaturas</string>
    <string name="boton2">Alumnos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_asignatura">Add asignatura</string>
    <string name="add_alumno">add alumno</string>
    <string name="nombre_alumno">Nombre Alumno</string>
    <string name="apellidos_alumno">Apellidos alumno</string>
    <string name="dni_alumno">DNI alumno</string>
    <string name="update_asignatura">Update Asignatura</string>
    <string name="guardar">Guardar</string>
    <string name="nombre_asignatura">Nombre asignatura</string>
    <string name="codigo_asignatura">Codigo asignatura</string>
    <string name="update_alumno">Update alumno</string>
</resources>